--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,12 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false
+#    url: jdbc:mysql://127.0.0.1/sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/sell?user=root&password=root&characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
 server:
   servlet:
   #URL前缀
     context-path: /sell
-    #test
+  port: 8765
